--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,59 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">SanitySuite</th></tr>
-<tr><td><a href="#t0">CreateEventAndGetEvents</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num attn">3</td><td class="num">12,943</td><td></td><td></td></tr>
+<tr><td><a href="#t0">CreateEventAndGetEvents</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">5,057</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">SanitySuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">CreateEventAndGetEvents &#8212; failed</th></tr><tr class="failedeven"><td rowspan="3">org.petsFirst.api.post.CreateEventAPI</td><td><a href="#m0">createEventWithPreviousDate</a></td><td rowspan="1">1740294057871</td><td rowspan="1">366</td></tr><tr class="failedeven"><td><a href="#m1">createEventWithRequiredFields</a></td><td rowspan="1">1740294053033</td><td rowspan="1">4396</td></tr><tr class="failedeven"><td><a href="#m2">createEventWithSkippableFields</a></td><td rowspan="1">1740294057488</td><td rowspan="1">368</td></tr><tr><th colspan="4">CreateEventAndGetEvents &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">org.petsFirst.api.delete.DeleteEventAPI</td><td><a href="#m3">deleteEvent</a></td><td rowspan="1">1740294063866</td><td rowspan="1">2064</td></tr><tr class="passedodd"><td rowspan="1">org.petsFirst.api.get.GetEventAPI</td><td><a href="#m4">getEvent</a></td><td rowspan="1">1740294060582</td><td rowspan="1">3280</td></tr><tr class="passedeven"><td rowspan="1">org.petsFirst.api.post.CreateEventAPI</td><td><a href="#m5">createEventWithFutureDate</a></td><td rowspan="1">1740294058240</td><td rowspan="1">1964</td></tr><tr class="passedodd"><td rowspan="1">org.petsFirst.api.post.LogoutAPI</td><td><a href="#m6">testLogout</a></td><td rowspan="1">1740294060207</td><td rowspan="1">364</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">SanitySuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">CreateEventAndGetEvents &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">org.petsFirst.api.post.LogoutAPI</td><td><a href="#m0">testLogout</a></td><td rowspan="1">1740297938462</td><td rowspan="1">4988</td></tr></tbody>
 </table>
-<h2>CreateEventAndGetEvents</h2><h3 id="m0">org.petsFirst.api.post.CreateEventAPI#createEventWithPreviousDate</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Unexpected status code received. expected [201] but found [400]
-	at org.petsFirst.api.post.CreateEventAPI.createEventWithPreviousDate(CreateEventAPI.java:103)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 32 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">org.petsFirst.api.post.CreateEventAPI#createEventWithRequiredFields</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: 1 expectation failed.
-Expected status code &lt;201&gt; but was &lt;400&gt;.
-
-	at org.codehaus.groovy.runtime.callsite.ConstructorSite$ConstructorSiteNoUnwrapNoCoerce.callConstructor(ConstructorSite.java:108)
-	at org.codehaus.groovy.runtime.callsite.CallSiteArray.defaultCallConstructor(CallSiteArray.java:57)
-	at org.codehaus.groovy.runtime.callsite.AbstractCallSite.callConstructor(AbstractCallSite.java:263)
-	at org.codehaus.groovy.runtime.callsite.AbstractCallSite.callConstructor(AbstractCallSite.java:277)
-	at io.restassured.internal.ResponseSpecificationImpl$HamcrestAssertionClosure.validate(ResponseSpecificationImpl.groovy:512)
-	at io.restassured.internal.ResponseSpecificationImpl$HamcrestAssertionClosure$validate$1.call(Unknown Source)
-	at io.restassured.internal.ResponseSpecificationImpl.validateResponseIfRequired(ResponseSpecificationImpl.groovy:696)
-	at io.restassured.internal.ResponseSpecificationImpl.this$2$validateResponseIfRequired(ResponseSpecificationImpl.groovy)
-	at org.codehaus.groovy.runtime.callsite.PlainObjectMetaMethodSite.doInvoke(PlainObjectMetaMethodSite.java:43)
-	at org.codehaus.groovy.runtime.callsite.PogoMetaMethodSite$PogoCachedMethodSiteNoUnwrapNoCoerce.invoke(PogoMetaMethodSite.java:198)
-	at org.codehaus.groovy.runtime.callsite.PogoMetaMethodSite.callCurrent(PogoMetaMethodSite.java:62)
-	at org.codehaus.groovy.runtime.callsite.AbstractCallSite.callCurrent(AbstractCallSite.java:185)
-	at io.restassured.internal.ResponseSpecificationImpl.statusCode(ResponseSpecificationImpl.groovy:135)
-	at io.restassured.specification.ResponseSpecification$statusCode$0.callCurrent(Unknown Source)
-	at io.restassured.internal.ResponseSpecificationImpl.statusCode(ResponseSpecificationImpl.groovy:143)
-	at io.restassured.internal.ValidatableResponseOptionsImpl.statusCode(ValidatableResponseOptionsImpl.java:89)
-	at org.petsFirst.api.post.CreateEventAPI.createEventWithRequiredFields(CreateEventAPI.java:40)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 37 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">org.petsFirst.api.post.CreateEventAPI#createEventWithSkippableFields</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: 1 expectation failed.
-Expected status code &lt;201&gt; but was &lt;400&gt;.
-
-	at org.codehaus.groovy.runtime.callsite.ConstructorSite$ConstructorSiteNoUnwrapNoCoerce.callConstructor(ConstructorSite.java:108)
-	at org.codehaus.groovy.runtime.callsite.AbstractCallSite.callConstructor(AbstractCallSite.java:277)
-	at io.restassured.internal.ResponseSpecificationImpl$HamcrestAssertionClosure.validate(ResponseSpecificationImpl.groovy:512)
-	at io.restassured.internal.ResponseSpecificationImpl$HamcrestAssertionClosure$validate$1.call(Unknown Source)
-	at io.restassured.internal.ResponseSpecificationImpl.validateResponseIfRequired(ResponseSpecificationImpl.groovy:696)
-	at io.restassured.internal.ResponseSpecificationImpl.this$2$validateResponseIfRequired(ResponseSpecificationImpl.groovy)
-	at org.codehaus.groovy.runtime.callsite.PlainObjectMetaMethodSite.doInvoke(PlainObjectMetaMethodSite.java:43)
-	at org.codehaus.groovy.runtime.callsite.PogoMetaMethodSite$PogoCachedMethodSiteNoUnwrapNoCoerce.invoke(PogoMetaMethodSite.java:198)
-	at org.codehaus.groovy.runtime.callsite.PogoMetaMethodSite.callCurrent(PogoMetaMethodSite.java:62)
-	at org.codehaus.groovy.runtime.callsite.AbstractCallSite.callCurrent(AbstractCallSite.java:185)
-	at io.restassured.internal.ResponseSpecificationImpl.statusCode(ResponseSpecificationImpl.groovy:135)
-	at io.restassured.specification.ResponseSpecification$statusCode$0.callCurrent(Unknown Source)
-	at io.restassured.internal.ResponseSpecificationImpl.statusCode(ResponseSpecificationImpl.groovy:143)
-	at io.restassured.internal.ValidatableResponseOptionsImpl.statusCode(ValidatableResponseOptionsImpl.java:89)
-	at org.petsFirst.api.post.CreateEventAPI.createEventWithSkippableFields(CreateEventAPI.java:70)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 37 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">org.petsFirst.api.delete.DeleteEventAPI#deleteEvent</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">org.petsFirst.api.get.GetEventAPI#getEvent</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">org.petsFirst.api.post.CreateEventAPI#createEventWithFutureDate</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">org.petsFirst.api.post.LogoutAPI#testLogout</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>CreateEventAndGetEvents</h2><h3 id="m0">org.petsFirst.api.post.LogoutAPI#testLogout</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
