--- a/test-output/old/SanitySuite/methods.html
+++ b/test-output/old/SanitySuite/methods.html
@@ -1,18 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>SanitySuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f08074">  <td>25/02/23 12:00:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateEventAPI.createEventWithPreviousDate()[pri:2, instance:org.petsFirst.api.post.CreateEventAPI@4ae9cfc1]">createEventWithPreviousDate</td> 
-  <td>main@1958402562</td>   <td></td> </tr>
-<tr bgcolor="f08074">  <td>25/02/23 12:00:57</td>   <td>-383</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateEventAPI.createEventWithSkippableFields()[pri:1, instance:org.petsFirst.api.post.CreateEventAPI@4ae9cfc1]">createEventWithSkippableFields</td> 
-  <td>main@1958402562</td>   <td></td> </tr>
-<tr bgcolor="fb79a0">  <td>25/02/23 12:01:00</td>   <td>2711</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetEventAPI.getEvent()[pri:0, instance:org.petsFirst.api.get.GetEventAPI@4b23c30a]">getEvent</td> 
-  <td>main@1958402562</td>   <td></td> </tr>
-<tr bgcolor="f08074">  <td>25/02/23 12:00:58</td>   <td>369</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateEventAPI.createEventWithFutureDate()[pri:3, instance:org.petsFirst.api.post.CreateEventAPI@4ae9cfc1]">createEventWithFutureDate</td> 
-  <td>main@1958402562</td>   <td></td> </tr>
-<tr bgcolor="e4d9ab">  <td>25/02/23 12:01:03</td>   <td>5995</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DeleteEventAPI.deleteEvent()[pri:0, instance:org.petsFirst.api.delete.DeleteEventAPI@38089a5a]">deleteEvent</td> 
-  <td>main@1958402562</td>   <td></td> </tr>
-<tr bgcolor="8d6d84">  <td>25/02/23 12:01:00</td>   <td>2336</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogoutAPI.testLogout()[pri:0, instance:org.petsFirst.api.post.LogoutAPI@9ebe38b]">testLogout</td> 
-  <td>main@1958402562</td>   <td></td> </tr>
-<tr bgcolor="f08074">  <td>25/02/23 12:00:53</td>   <td>-4839</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateEventAPI.createEventWithRequiredFields()[pri:0, instance:org.petsFirst.api.post.CreateEventAPI@4ae9cfc1]">createEventWithRequiredFields</td> 
-  <td>main@1958402562</td>   <td></td> </tr>
+<tr bgcolor="9db7c7">  <td>25/02/23 13:05:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogoutAPI.testLogout()[pri:0, instance:org.petsFirst.api.post.LogoutAPI@ca30bc1]">testLogout</td> 
+  <td>main@1076071888</td>   <td></td> </tr>
 </table>
